commit on 'main'

--- a/html/student.html
+++ b/html/student.html
@@ -6,19 +6,20 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="css/student.css" />
+    <link rel="stylesheet" type="text/css" href="../css/student.css" />
     <title>Student</title>
   </head>
   <body>
     <!-- Navbar -->
     <div class="navbar-container">
       <div class="navbar">
-        <a href="index.html" class="navbar-item">Home</a>
-        <a href="student.html" class="navbar-item">Enter Student Details</a>
+        <a href="/" class="navbar-item">Home</a>
+        <a href="/student" class="navbar-item">Enter Student Details</a>
         <a href="/search" class="navbar-item">Search Degree</a>
         <a href="/upload" class="navbar-item">Upload Image</a>
       </div>
     </div>
+    <!-- Student form -->
     <div class="content-container">
       <form class="student-form" method="POST">
         <h1>Student Details</h1>
