--- a/html/search.html
+++ b/html/search.html
@@ -6,18 +6,28 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <title>Search</title>
   </head>
   <body>
     <!-- Navbar -->
     <div class="navbar-container">
       <div class="navbar">
-        <a href="index.html" class="navbar-item">Home</a>
-        <a href="student.html" class="navbar-item">Enter Student Details</a>
+        <a href="/" class="navbar-item">Home</a>
+        <a href="/student" class="navbar-item">Enter Student Details</a>
         <a href="/search" class="navbar-item">Search Degree</a>
         <a href="/upload" class="navbar-item">Upload Image</a>
       </div>
+    </div>
+    <!-- Search Form -->
+    <div class="content-container">
+      <form name="search">
+        <h1>Search Degree</h1>
+        <label for="degree">Degree: </label>
+        <input type="text" name="degree" required="required" />
+        <br />
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
 </html>
