--- a/html/upload.html
+++ b/html/upload.html
@@ -6,18 +6,31 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/upload.css" />
     <title>Upload Image</title>
   </head>
   <body>
     <!-- Navbar -->
     <div class="navbar-container">
       <div class="navbar">
-        <a href="index.html" class="navbar-item">Home</a>
-        <a href="student.html" class="navbar-item">Enter Student Details</a>
+        <a href="/" class="navbar-item">Home</a>
+        <a href="/student" class="navbar-item">Enter Student Details</a>
         <a href="/search" class="navbar-item">Search Degree</a>
         <a href="/upload" class="navbar-item">Upload Image</a>
       </div>
+    </div>
+    <!-- Content -->
+    <div class="content-container">
+      <form
+        class="image-form"
+        action="/upload"
+        enctype="multipart/form-data"
+        method="POST"
+      >
+        <h1>Upload Image</h1>
+        <input type="file" name="upload" multiple="multiple" />
+        <input type="submit" value="Upload File" />
+      </form>
     </div>
   </body>
 </html>
