commit on 'main'

--- a/html/upload.html
+++ b/html/upload.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="../css/upload.css" />
+    <link rel="stylesheet" type="text/css" href="/uploadCss" />
     <title>Upload Image</title>
   </head>
   <body>
