--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="/indexCss" />
     <title>Student Portal</title>
   </head>
   <body>
