--- a/html/student.html
+++ b/html/student.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1.0"
       charset="UTF-8"
     />
-    <link rel="stylesheet" type="text/css" href="../css/student.css" />
+    <link rel="stylesheet" type="text/css" href="/studentCss" />
     <title>Student</title>
   </head>
   <body>
