--- a/html/upload.html
+++ b/html/upload.html
@@ -14,9 +14,9 @@
     <div class="navbar-container">
       <div class="navbar">
         <a href="/" class="navbar-item">Home</a>
-        <a href="/student" class="navbar-item">Enter Student Details</a>
-        <a href="/search" class="navbar-item">Search Degree</a>
-        <a href="/upload" class="navbar-item">Upload Image</a>
+        <a href="/studentpage" class="navbar-item">Enter Student Details</a>
+        <a href="/searchpage" class="navbar-item">Search Degree</a>
+        <a href="/uploadpage" class="navbar-item">Upload Image</a>
       </div>
     </div>
     <!-- Content -->
