--- a/html/student.html
+++ b/html/student.html
@@ -21,7 +21,12 @@
     </div>
     <!-- Student form -->
     <div class="content-container">
-      <form id="student-form" method="POST" onsubmit="return validate();">
+      <form
+        action="/studentDetail"
+        id="student-form"
+        method="POST"
+        onsubmit="return validate();"
+      >
         <h1>Student Details</h1>
         <label for="studentId">Student ID: </label>
         <input type="text" name="studentId" required="required" />
