commit on 'main'

--- a/html/student.html
+++ b/html/student.html
@@ -65,6 +65,8 @@
 
         <button type="submit" name="submitButton">Submit</button>
         <button type="reset" name="resetButton">Reset</button>
+
+        <script type="text/javascript"></script>
       </form>
     </div>
 
