commit on 'main'

--- a/html/upload.html
+++ b/html/upload.html
@@ -29,7 +29,8 @@
       >
         <h1>Upload Image</h1>
         <input type="file" name="upload" multiple="multiple" />
-        <input type="submit" value="Upload File" />
+        <br />
+        <button type="submit">Upload File</button>
       </form>
     </div>
   </body>
