--- a/html/student.html
+++ b/html/student.html
@@ -55,8 +55,8 @@
         <label for="male">Male</label>
         <input type="radio" id="female" name="gender" value="female" />
         <label for="female">Female</label>
-        <input type="radio" id="other" name="gender" value="other" />
-        <label for="other">Other</label>
+        <input type="radio" id="other" name="gender" value="others" />
+        <label for="other">Others</label>
         <br />
 
         <label for="degree">Degree: </label>
