--- a/html/student.html
+++ b/html/student.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-      charset="UTF-8"
     />
     <link rel="stylesheet" type="text/css" href="/studentCss" />
     <title>Student</title>
@@ -24,27 +23,28 @@
       <form
         action="/studentDetail"
         id="student-form"
-        method="POST"
+        method="post"
         onsubmit="return validate();"
       >
         <h1>Student Details</h1>
         <label for="studentId">Student ID: </label>
-        <input type="text" name="studentId" required="required" />
+        <input type="text" id="studentId" name="studentId" required="required" />
         <br />
 
         <label for="firstName">First Name: </label>
-        <input type="text" name="firstName" required="required" />
+        <input type="text" id="firstName" name="firstName" required="required" />
         <br />
 
         <label for="lastName">Last Name: </label>
-        <input type="text" name="lastName" required="required" />
+        <input type="text" id="lastName" name="lastName" required="required" />
         <br />
 
         <label for="age">Age: </label>
-        <input type="text" name="age" required="required" />
+        <input type="text" id="age" name="age" required="required" />
         <br />
 
-        <label for="gender">Gender: </label>
+        <fieldset>
+        <legend>Gender: </legend>
         <input
           type="radio"
           id="male"
@@ -57,10 +57,11 @@
         <label for="female">Female</label>
         <input type="radio" id="other" name="gender" value="others" />
         <label for="other">Others</label>
+        </fieldset>
         <br />
 
         <label for="degree">Degree: </label>
-        <input type="text" name="degree" required="required" />
+        <input type="text" id="degree" name="degree" required="required" />
         <br />
 
         <button type="submit" name="submitButton">Submit</button>
