--- a/html/studentDetail.html
+++ b/html/studentDetail.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-      charset="UTF-8"
     />
     <link rel="stylesheet" type="text/css" href="/indexCss" />
     <title>Student Portal</title>
